🎨 style(web): update various styles

--- a/apps/web/src/layout/BaseLayout/Footer/components/Newsletter.astro
+++ b/apps/web/src/layout/BaseLayout/Footer/components/Newsletter.astro
@@ -29,7 +29,7 @@ import H5 from "./H5.astro";
     <button
       type="submit"
       class={cn(
-        "font-open-sans text-primary flex items-center justify-center gap-2 bg-black py-2 font-bold",
+        "font-open-sans text-primary flex cursor-pointer items-center justify-center gap-2 bg-black py-2 font-bold",
         "text-base",
         "md:text-lg",
       )}
