--- a/apps/web/src/layout/PostLayout/components/Header/Title.astro
+++ b/apps/web/src/layout/PostLayout/components/Header/Title.astro
@@ -4,11 +4,10 @@ import { cn } from "@/lib/utils";
 
 <h1
   class={cn(
-    "font-bakbak text-balance break-words pb-2 uppercase leading-[90%]",
-    "mb-3 border-b-[5px] border-black text-[2.3rem] leading-none",
-    "xs:border-b-[5px] xs:text-5xl mb-4",
-    "sm:border-b-[5px] sm:text-6xl",
-    "md:border-b-[8px] md:text-7xl",
+    "font-bakbak text-balance break-words border-black text-3xl uppercase leading-none",
+    "xs:text-4xl",
+    "sm:text-5xl",
+    "md:text-6xl",
   )}
 >
   <slot />
