--- a/apps/web/src/pages/abonnements/index.astro
+++ b/apps/web/src/pages/abonnements/index.astro
@@ -1,8 +1,8 @@
 ---
 import PageLayout from "@/layout/PageLayout/PageLayout.astro";
 import SubscriptionCard from "./_components/SubscriptionCard.astro";
-import SubscriptionFormWrapper from "./_components/SubscriptionFormWrapper";
-import DonationFormWrapper from "./_components/DonationFormWrapper";
+import { SubscriptionFormWrapper } from "./_components/SubscriptionFormWrapper";
+import { DonationFormWrapper } from "./_components/DonationFormWrapper";
 import H2 from "@/components/H2";
 
 import { Image } from "astro:assets";
