--- a/apps/web/src/layout/PostLayout/components/Footer/Banner.astro
+++ b/apps/web/src/layout/PostLayout/components/Footer/Banner.astro
@@ -7,7 +7,7 @@ import BannerImage from "../../assets/banner.webp";
   <Image
     src={BannerImage}
     alt="Bannière abonnements"
-    class="mb-12 w-full"
+    class="mb-12 w-full rounded-lg"
     width="800"
   />
 </a>
