--- a/apps/web/src/styles/wordpress.css
+++ b/apps/web/src/styles/wordpress.css
@@ -1,3 +1,12 @@
+/* Featured image caption */
+article .featured-image {
+  font-family: "Open Sans", sans-serif;
+  font-size: var(--font-size);
+  text-align: center;
+  color: var(--color-gray-600);
+}
+
+/* Content */
 .content {
   --line-height: 1.7;
 
@@ -8,7 +17,7 @@
   line-height: var(--line-height);
 }
 
-/* Videos youtube */
+/* Youtube videos */
 .content div:has(iframe[src^="https://www.youtube.com"])
 {
   width: 100%;
@@ -47,6 +56,15 @@
   text-decoration-thickness: 10px;
 }
 
+/* Chapo */
+.content p:has(strong):first-of-type {
+  font-weight: 900;
+  margin-bottom: 20px;
+  padding: 15px 20px;
+  background: linear-gradient(135deg, #fff5be 0%, #fbbf24 50%, #f7a71e 75%, #f3ad5c 100%);
+  box-shadow: 4px 4px 8px rgba(0, 0, 0, 0.2);
+}
+
 /* Links */
 .content a {
   text-decoration: underline;
@@ -83,16 +101,7 @@
   font-size: 20px;
 }
 
-/* Chapo */
-.content p:has(strong):first-of-type {
-  font-weight: 900;
-  margin-bottom: 20px;
-  padding: 15px 20px;
-  background: linear-gradient(135deg, #fff5be 0%, #fbbf24 50%, #f7a71e 75%, #f3ad5c 100%);
-  box-shadow: 4px 4px 8px rgba(0, 0, 0, 0.2);
-}
 /* --- */
-
 .content figure {
   margin: 30px 0;
 }
