🎨 style(dashboard): use shadcn/ui sidebar

--- a/apps/web/src/layout/BaseLayout/BaseLayout.astro
+++ b/apps/web/src/layout/BaseLayout/BaseLayout.astro
@@ -16,7 +16,7 @@ import "@fontsource/open-sans/700.css";
 import "@fontsource/parisienne";
 import "@fontsource/roboto";
 
-import "../../styles/global.css";
+import "../../styles/globals.css";
 import { SITE_URL } from "@/constants";
 
 const DEFAULT_IMAGE_URL = `${SITE_URL}img/og/default.webp`;
