--- a/apps/web/src/pages/abonnements/index.astro
+++ b/apps/web/src/pages/abonnements/index.astro
@@ -16,12 +16,11 @@ import { SUBSCRIPTIONS } from "./_models";
 import { Link } from "@/components/Link";
 
 const { mini, maxi, medium } = SUBSCRIPTIONS;
-const ogImageUrl = `${OG_IMAGES_URL}numero_2025.webp`;
 ---
 
 <PageLayout
   title="S'abonner à Frustration Magazine"
-  ogImageUrl={ogImageUrl}
+  ogImageUrl={`${OG_IMAGES_URL}/numero_2025.webp`}
 >
   <article slot="content">
     <!-- 🅰️ Titles -->
