--- a/apps/web/src/pages/sorties-papier/index.astro
+++ b/apps/web/src/pages/sorties-papier/index.astro
@@ -1,50 +1,26 @@
 ---
 import PageLayout from "@/layout/PageLayout/PageLayout.astro";
-import CardPaper from "./_components/CardPaper.astro";
+import { PaperItemTabs } from "./_components/PaperItemTabs";
 import H2 from "@/components/H2";
 import H3 from "@/components/H3";
 
-import numeroPapier1 from "@/assets/papers/numero-papier-1.webp";
-import numeroPapier2 from "@/assets/papers/numero-papier-2.webp";
-import saintLuigi from "@/assets/papers/saint-luigi.webp";
 import { Link } from "@/components/Link";
+import { prisma } from "data-access/prisma";
 
-type PaperItem = {
-  title: string;
-  author?: string;
-  description?: string;
-  image: any;
-  link: string;
-  type: "magazine" | "book";
-};
+const paperItems = await prisma.paperItem.findMany({
+  include: {
+    author: true,
+    image: true,
+  },
+  where: {
+    displayItem: true,
+  },
+  orderBy: {
+    releaseDate: "desc",
+  },
+});
 
-const papers: PaperItem[] = [
-  {
-    title: "Saint Luigi",
-    author: "Nicolas Framont",
-    description:
-      "Est-il condamnable de tuer une personne responsable de la mort et de la souffrance de milliers d'autres ?",
-    image: saintLuigi,
-    link: "https://www.leslibraires.fr/livre/24552791-saint-luigi-comment-repondre-a-la-violence-du-capitalisme-nicolas-framont-editions-les-liens-qui-liberent",
-    type: "book",
-  },
-  {
-    title: "Frustration #2",
-    author: "Rédaction",
-    description: "Comment tenir face à un monde qui s'effondre autour de nous ?",
-    image: numeroPapier2,
-    link: "https://www.leslibraires.fr/livre/23958625-frustration-n2-comment-tenir--frustration-editions-les-liens-qui-liberent",
-    type: "magazine",
-  },
-  {
-    title: "Frustration #1",
-    author: "Rédaction",
-    description: "Et maintenant, on fait quoi ?",
-    image: numeroPapier1,
-    link: "https://www.leslibraires.fr/livre/22868832-frustration-le-mook-frustration-editions-les-liens-qui-liberent",
-    type: "magazine",
-  },
-];
+export type PaperItemWithRelations = (typeof paperItems)[number];
 ---
 
 <PageLayout
@@ -70,21 +46,11 @@ const papers: PaperItem[] = [
       </p>
     </section>
 
-    <section class="mt-12">
-      {
-        papers.length ? (
-          <div class="grid grid-cols-1 gap-8 sm:grid-cols-2 md:grid-cols-3">
-            {papers.map((paper) => (
-              <CardPaper paper={paper} />
-            ))}
-          </div>
-        ) : (
-          <div class="py-12 text-center">
-            <p class="text-lg text-gray-600">Aucune sortie papier disponible pour le moment.</p>
-            <p class="mt-2 text-sm text-gray-500">Revenez bientôt pour découvrir nos nouvelles publications !</p>
-          </div>
-        )
-      }
+    <section class="mt-6">
+      <PaperItemTabs
+        client:load
+        paperItems={paperItems}
+      />
     </section>
   </article>
 </PageLayout>
