--- a/apps/web/src/pages/sorties-papier/index.astro
+++ b/apps/web/src/pages/sorties-papier/index.astro
@@ -6,6 +6,10 @@ import H3 from "@/components/H3";
 
 import { Link } from "@/components/Link";
 import { prisma } from "data-access/prisma";
+import { setCacheHeaders, CachePresets } from "@/lib/cache";
+
+export const prerender = false;
+setCacheHeaders(Astro.response.headers, CachePresets.medium);
 
 const paperItems = await prisma.paperItem.findMany({
   include: {
