--- a/apps/web/src/layout/PostLayout/components/Footer/SubscribeBanner.astro
+++ b/apps/web/src/layout/PostLayout/components/Footer/SubscribeBanner.astro
@@ -3,11 +3,11 @@ import { Image } from "astro:assets";
 import BannerImage from "../../assets/banner.webp";
 ---
 
-<a href="/abonnements">
+<a href="/abonnements#formules">
   <Image
     src={BannerImage}
     alt="Bannière abonnements"
-    class="mb-12 w-full rounded-lg"
+    class="mb-12 w-full rounded-md shadow-md"
     width="800"
   />
 </a>
