--- a/apps/web/src/pages/sorties-papier/index.astro
+++ b/apps/web/src/pages/sorties-papier/index.astro
@@ -7,7 +7,7 @@ import H3 from "@/components/H3";
 import { Link } from "@/components/Link";
 import { prisma } from "data-access/prisma";
 
-/* Keep it SSG to save compute time on Neon, an admin can rebuild the page from the dashboard */
+/* Leave this commented out to keep it SSG to save compute time on Neon, an admin can rebuild the page from the dashboard */
 // import { setCacheHeaders, CachePresets } from "@/lib/cache";
 // export const prerender = false;
 // setCacheHeaders(Astro.response.headers, CachePresets.medium);
